[tool.poetry]
name = "rebell-retriever"
version = "1.0.0"
description = "Vacature scraping en opslag project"
authors = ["Sem <sem.smits@student.hu.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.12.0"
beautifulsoup4 = "^4.13.3"
requests = "^2.32.3"
playwright = "^1.51.0"
psycopg2 = "^2.9.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
